<resources>
    <string name="app_name">Marketplace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation </string>
    <string name="close_nav">Close Navigation </string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_Up">Sign Up</string>
    <string name="sign_up_">Sign Up</string>
    <string name="sign_in_">Sign In</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_name">User name</string>
    <string name="e_mail">E-mail</string>
    <string name="password_">Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_inReg">Sign In</string>
</resources>